# good_book_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rag_scripture_demo.py
data/: 3rd_Nephi.txt
