[tool.poetry]
name = "the good book bot"
version = "0.1.0"
description = ""
authors = ["Mick Zeller <mickzeller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "2.1.0"
jupyterlab = "^4.2.3"
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.0.1"
tensorflow = "^2.17.0"
tf-keras = "^2.17.0"
langchain = "^0.3.26"
langchain-community = "^0.3.27"
langchain-huggingface = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
